Single Problem Controller added and Added Error Messages for Register and Login

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,13 @@
 .problem-link:hover{
     color: blueviolet;
 }
+
+div.error {
+    padding: 10px;
+    background: #f89a9a;
+    border: 1px solid var(--error);
+    color: var(--error);
+    border-radius: 4px;
+    margin: 20px 0;
+    font-weight: bolder;
+}
