tab-section-splitter-vertical

--- a/frontend/src/pages/styles/split.css
+++ b/frontend/src/pages/styles/split.css
@@ -1,20 +1,8 @@
-.split-1 {
+.split {
     display: flex;
     flex-direction: row;
 }
 
-.split-2{
-    display:flex;
-    flex-direction: column;
-    
-}
-
-.custom-gutter{
-    background-color: #eee;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    width:100vw;
-}
 
 .gutter {
     background-color: #eee;
@@ -26,6 +14,7 @@
 .gutter:hover{
     background-color: #666;
 }
+
 
 .gutter.gutter-horizontal {
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
