Search Input FrontEnd Done

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,4 +15,11 @@ div.error {
     margin: 20px 0;
     font-weight: bolder;
 }
+
+.search-input::placeholder {
+    color: white; 
+  }
+.search-input:focus {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0);
+}
   
