Changes to Looks of Problem Page

--- a/frontend/src/components/styles/Footer.css
+++ b/frontend/src/components/styles/Footer.css
@@ -1,8 +1,5 @@
 .problem-footer{
-    position: 'fixed';
-    width:'100%';
-    bottom:'0';
-    height:4rem;
+    height:10%;
     border-top:10px solid #eee;
     border-bottom:10px solid #eee;
 }
